
Versions of Major Components
---------------------
Apache Tika 1.13
Carrot2 3.15.0
Velocity 1.7 and Velocity Tools 2.0
Apache UIMA 2.3.1
Apache ZooKeeper 3.4.10
Jetty 9.3.14.v20161028

Detailed Change List
----------------------

New Features
----------------------

* SOLR-10307: Allow Passing SSL passwords through environment variables. (Mano Kovacs via Mark Miller)

Other Changes
----------------------

* SOLR-10617: JDBCStream accepts columns of type TIME, DATE & TIMESTAMP as well as CLOBs and decimal
  numeric types (James Dyer)
                                      
* SOLR-10400: Replace (instanceof TrieFooField || instanceof FooPointField) constructs with 
  FieldType.getNumberType() or SchemaField.getSortField() where appropriate. (hossman, Steve Rowe)

==================  6.6.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

Versions of Major Components
---------------------
Apache Tika 1.13
Carrot2 3.15.0
Velocity 1.7 and Velocity Tools 2.0
Apache UIMA 2.3.1
Apache ZooKeeper 3.4.10
Jetty 9.3.14.v20161028

Upgrade Notes
----------------------

* Solr contribs map-reduce, morphlines-core and morphlines-cell have been removed.

* JSON Facet API now uses hyper-log-log for numBuckets cardinality calculation and
  calculates cardinality before filtering buckets by any mincount greater than 1.

* ZooKeeper dependency has been upgraded from 3.4.6 to 3.4.10.

* Setting <solrQueryParser defaultOperator="..."/> in schema is no longer allowed and will cause an exception,
  but older configs with luceneMatchVersion < 6.6 will still work as before.
  Please use "q.op" parameter on the request instead. For more details, see SOLR-10586.

* Setting <defaultSearchField> in schema is no longer allowed and will cause an exception,
  but older configs with luceneMatchVersion < 6.6 will still work as before.
  Please use "df" parameter on the request instead. For more details, see SOLR-10587.

Detailed Change List